# ads-moderation

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  errors.py  main.py  model.py  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  model.py
app/clients/: kafka.py  postgres.py  redis.py  settings.py
app/db/: pgmigrate.yaml
app/db/migrations/: V001__initial.sql  V002__add_is_closed.sql
app/models/: ads.py
app/repositories/: ads.py  moderation.py  sellers.py  users.py
app/routers/: moderation.py  users.py  utils.py
app/services/: users.py
app/workers/: moderation_worker.py
clients/: postgres.py
db/: migrations.yaml
db/migrations/: V001__initial.sql
models/: ads.py  users.py
repositories/: users.py
routers/: moderation.py  users.py
services/: users.py
tests/: conftest.py  test_async_predict.py  test_cache.py  test_close_ad.py  test_moderation.py  test_moderation_result.py  test_predict.py  test_simple_predict.py  test_users.py  test_worker.py
